2024-04-19T16:22:42Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8756645616 # 391
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2024-04-19
* notice: query file size: 24497
* notice: accum prev / next / diff: re vi: 0 286 / 0 289 / +0 +3

2024-04-19T12:30:48Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8753563313 # 390
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2024-04-19
* notice: query file size: 24663
* notice: accum prev / next / diff: re vi: 0 285 / 0 286 / +0 +1

2024-04-19T08:21:03Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8750594470 # 389
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2024-04-19
* notice: query file size: 24505
* notice: accum prev / next / diff: re vi: 0 283 / 0 285 / +0 +2

2024-04-19T04:19:19Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8748337521 # 388
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2024-04-19
* notice: query file size: 24499
* notice: accum prev / next / diff: re vi: 0 279 / 0 283 / +0 +4

2024-04-19T01:13:23Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8746906919 # 387
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2024-04-19
* notice: query file size: 24483
* notice: accum prev / next / diff: re vi: 0 277 / 0 279 / +0 +2

2024-04-18T16:21:35Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8741376382 # 385